Implemented JWT auth & documented APIs
