# routes/api.php
@@ -6,20 +6,16 @@ use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\Welcome;
 use App\Http\Controllers\PostController;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
+
 
 
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
-Route::get('/get-profile', [AuthController::class, 'getProfile']);
 
-Route::middleware('auth:sanctum')->group(function () {
+Route::middleware('auth:api')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout']);
-    Route::get('/profile', function (Request $request) {
-        return $request->user();
-    });
+    Route::post('/refresh', [AuthController::class, 'refresh']);
+    Route::get('/me', [AuthController::class, 'me']);
 });
 
 Route::apiResource('posts', PostController::class);
